feat: Kotlin Native Export plugin — use Kotlin/Native transparently from JVM via FFM
Gradle plugin that generates FFM (Foreign Function & Memory API) bindings
between Kotlin/Native and JVM. Inspired by swift-export-standalone (JetBrains)
and swift-java (Apple).

Pipeline: scan native sources → generate @CName bridges (StableRef) +
JVM proxy classes (FFM MethodHandles) → compile to shared library.

- Supports classes, methods, properties, top-level functions
- Supported types: Int, Long, Double, Float, Boolean, String, classes
- Object lifecycle via Java Cleaner + StableRef.dispose()
- Configurable build type (release ~700KB / debug ~6MB)
- Auto-configures java.library.path + --enable-native-access for tests
- Examples: calculator (Compose Desktop) + systeminfo (libnotify cinterop)